Added the HTML and CSS for resubmission

--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
             <h2 class='hdr-style'>Nutritional Info</h2>
 
             <ul>
-                <li>Calories </li>
-                <li>Carbs </li>
-                <li>Fat </li>
-                <li>Fiber </li>
-                <li>Sugar </li>
-                <li>Protein </li>
+                <li>Calories: 500</li>
+                <li>Carbs: 63g </li>
+                <li>Fat: 24g </li>
+                <li>Fiber: 1g </li>
+                <li>Sugar: 24g </li>
+                <li>Protein: 7g </li>
             </ul>
         </div>
 
